--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: "^0.7.0"
+  image_picker: "^0.5.4"
+  google_maps_flutter: ^0.5.7
   flutter_test:
     sdk: flutter
 
