--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  flutter_redux: ^0.5.3
   flutter_launcher_icons: "^0.7.0"
   image_picker: "^0.5.4"
   google_maps_flutter: ^0.5.7
