--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A JeSuisUnDesDeux project to spot cycle/walk issues.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,12 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
-dev_dependencies:
+  shared_preferences: ^0.5.1
   flutter_redux: ^0.5.3
+  redux_persist_flutter: ^0.8.1
   flutter_launcher_icons: "^0.7.0"
   image_picker: "^0.5.4"
   google_maps_flutter: ^0.5.7
+
+dev_dependencies:
   flutter_test:
     sdk: flutter
 
