--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  dependencies_flutter: ^0.1.6
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
   shared_preferences: ^0.5.1
