--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   dependencies_flutter: ^0.1.6
   cupertino_icons: ^0.1.2
+  flutter_bloc: ^0.21.0
+  meta: ^1.1.6
   http: ^0.12.0+2
   shared_preferences: ^0.5.1
   flutter_redux: ^0.5.3
