--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,8 @@
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
 
+ios/Flutter/flutter_export_environment.sh
+
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
